# image_detected_with_opencv

./: CMakeLists.txt  README.md  augment.cpp  augment.h  main.cpp
